# rusty_twilio

./: Cargo.toml  README.md
src/: client.rs  client_ext.rs  error.rs  lib.rs  request_parameters.rs  validation.rs
src/endpoints/: accounts.rs  applications.rs  mod.rs
src/endpoints/voice/: call.rs  conference.rs  mod.rs  stream.rs
src/twiml/: mod.rs  voice.rs
src/url/: query.rs
