[package]
name = "rusty_twilio"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.2.0"
reqwest = { version = "0.12.12", features = ["multipart", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.4"
xml = "0.8.20"
