[package]
name = "rusty_twilio"
version = "0.1.0"
edition = "2021"
description = "A Rust library for interacting with the Twilio API"
authors = ["rxwb"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rwxbytes/elevenlabs_rs"
keywords = ["twilio", "api", "telephony", "messaging"]

[dependencies]
hmac = "0.12.1"
http = "1.2.0"
reqwest = { version = "0.12.12", features = ["multipart", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha1 = "0.10.6"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.4"
xml = "0.8.20"
base64 = "0.22.1"
twiml_derive = "0.1.0"
validator = { version = "0.20.0", features = ["derive"] }
